--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.6",
+    "sass": "^1.62.1",
     "stylelint-config-prettier": "^9.0.5"
   }
 }
